logout commit 07/09
